closure actions now

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
     "ember-moment": "5.0.1",
+    "ember-route-action-helper": "0.2.0",
     "emberfire": "git://github.com/firebase/emberfire.git#cdd46bae9beacf7c0bff54d9990d1bf295f89333"
   }
 }
